syntax = "proto3";

package ai.lzy.v1;

import "ai/lzy/v1/common/slot.proto";
import "ai/lzy/v1/long-running/operation.proto";

option java_outer_classname = "LSA";
option java_package = "ai.lzy.v1.slots";

service LzySlotsApi {
  rpc CreateSlot (CreateSlotRequest) returns (CreateSlotResponse);

  // metadata: ConnectSlotMetadata
  // response: ConnectSlotResponse
  rpc ConnectSlot (ConnectSlotRequest) returns (Operation);

  rpc DisconnectSlot (DisconnectSlotRequest) returns (DisconnectSlotResponse);

  rpc StatusSlot (StatusSlotRequest) returns (StatusSlotResponse);

  rpc DestroySlot (DestroySlotRequest) returns (DestroySlotResponse);

  rpc OpenOutputSlot (SlotDataRequest) returns (stream SlotDataChunk);
}

message CreateSlotRequest {
  string taskId = 1;
  Slot slot = 2;
  string channelId = 3;
}

message CreateSlotResponse {
}

message ConnectSlotRequest {
  SlotInstance from = 1;
  SlotInstance to = 2;
}

message ConnectSlotResponse {
}

message ConnectSlotMetadata {
}

message DisconnectSlotRequest {
  SlotInstance slotInstance = 1;
}

message DisconnectSlotResponse {
}

message StatusSlotRequest {
  SlotInstance slotInstance = 1;
}

message StatusSlotResponse {
  SlotStatus status = 1;
}

message DestroySlotRequest {
  SlotInstance slotInstance = 1;
}

message DestroySlotResponse {
}

message SlotDataRequest {
  SlotInstance slotInstance = 1;
  int64 offset = 2;
}

message SlotDataChunk {
  enum Control {
    EOS = 0;
  }

  oneof kind {
    Control control = 1;
    bytes chunk = 2;
  }
}

